test/spec_vectors/func/fail/module_35.wat
(module (func $type-value-num-vs-nums (result f32 f32) (f32.const 0)))